# nfengine

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Engine.sln  README  README.md  Wildlife.wmv  appveyor_ubu.yml  appveyor_win.yml  clean.bat  engineConfig.cfg  format.bat  gen_doc.bat  groups  join.me.msi  project.config
Src/: CMakeLists.txt
Src/Apps/: CMakeLists.txt
Src/Apps/EngineDemo/: CMakeLists.txt  Main.cpp  (+6 more)
Src/Benchmarks/: CMakeLists.txt
Src/Engine/: CMakeLists.txt
Src/PropertyPages/: DebugProperties.props  FinalProperties.props  GlobalProperties.props  ReleaseProperties.props
Src/Shaders/: AmbientLightPS.json  DebugPS.json  DebugVS.json  GeometryPassVS.json  GuiGS.json  GuiVS.json
Src/Tests/: CMakeLists.txt
nfEngine/: CMakeLists.txt
nfEngine/Data/: nfEngineLogs.css  tablefilter.js
nfEngine/Raytracer/: Config.h  ForwardDeclarations.hpp  PCH.h  RayLib.h  Raytracer.h  Raytracer.vcxproj  Raytracer.vcxproj.filters
nfEngine/Renderers/: CMakeLists.txt
nfEngine/Shaders/: DebugPS.json  FullScreenQuadVS.json  GeometryPassPS.json  GuiPS.json  OmniLightPS.json  ShadowPS.json  SpotLightPS.json
nfEngine/TestResources/: CMakeLists.txt
nfEngine/Tools/: CMakeLists.txt
nfEngine/nfCommon/: Aligned.hpp  Assertion.cpp  Assertion.hpp  AsyncQueueManager.hpp  AsyncThreadPool.cpp  AsyncThreadPool.hpp  BVH.cpp  BVH.hpp  Bit.hpp  Buffer.cpp  Buffer.h  Buffer.hpp  CMakeLists.txt  ClassRegister.cpp  ClassRegister.hpp  Config.cpp  Config.hpp  ConfigDataTranslator.hpp  ConfigTokenizer.cpp  ConfigTokenizer.hpp  Console.hpp  DirectoryWatch.hpp  EnumIterator.hpp  File.hpp  FileAsync.cpp  FileAsync.hpp  FileBuffered.cpp  FileBuffered.hpp  FileSystem.hpp  FileSystemCommon.cpp  ForwardDeclarations.hpp  FrameThreadPool.cpp  FrameThreadPool.hpp  Image.cpp  Image.h  Image.hpp  ImageFormat.cpp  ImageFormat.hpp  ImageLoadBMP.cpp  ImageLoadDDS.cpp  (+57 more)
nfEngine/nfCommonPerfTest/: BVH.cpp  CMakeLists.txt  Common.cpp  Common.hpp  Config.cpp  File.cpp  FrameThreadPool.cpp  Logger.cpp  Main.cpp  PCH.cpp  PCH.hpp  Packer.cpp  Set.cpp  Test.hpp  ThreadPool.cpp  main.cpp  nfCommonPerfTest.vcxproj  nfCommonPerfTest.vcxproj.filters  stdafx.cpp  stdafx.hpp  test.hpp
nfEngine/nfCommonTest/: AlignedTest.cpp  ArrayTest.cpp  ArrayViewTest.cpp  BVH.cpp  BVHTest.cpp  BufferInputStreamTest.cpp  BufferOutputStreamTest.cpp  CMakeLists.txt  Common.cpp  Common.hpp  ConfigTest.cpp  Constants.cpp  Constants.hpp  DirectoryWatchTest.cpp  DynArrayTest.cpp  EnumIteratorTest.cpp  FileAsyncTest.cpp  FileBufferedTest.cpp  FileInputStreamTest.cpp  FileOutputStreamTest.cpp  FileSystemTest.cpp  FileTest.cpp  FrameThreadPoolSimple.cpp  FrameThreadPoolStress.cpp  ImageTest.cpp  InputStreamTest.cpp  LatchTest.cpp  LibraryTest.cpp  LogGrouperTest.cpp  LogScopeTest.cpp  LoggerTest.cpp  MD5Test.cpp  Main.cpp  MathGeometryTest.cpp  MathMatrixTest.cpp  MathTest.cpp  MathVectorTest.cpp  MemoryTest.cpp  OutputStreamTest.cpp  PCH.hpp  (+22 more)
nfEngine/nfCore/: Aligned.cpp  Aligned.h  Aligned.hpp  BVH.cpp  BVH.h  BVH.hpp  Body.cpp  Body.h  Body.hpp  Camera.cpp  Camera.h  Camera.hpp  CollisionShape.cpp  CollisionShape.h  CollisionShape.hpp  Component.cpp  Component.h  Component.hpp  Core.cpp  Core.h  Core.hpp  DebugRenderer.cpp  DebugRenderer.hpp  Engine.cpp  Engine.h  Engine.hpp  Entity.cpp  Entity.h  Entity.hpp  EntityManager.cpp  EntityManager.hpp  ForwardDeclarations.hpp  GeometryBufferRenderer.cpp  GeometryBufferRenderer.hpp  Globals.cpp  Globals.h  Globals.hpp  GuiRenderer.cpp  GuiRenderer.hpp  HLRenderer.cpp  (+76 more)
nfEngine/nfCoreTest/: EngineTest.cpp  EntityManagerTest.cpp  Main.cpp  PCH.hpp  Profiler.cpp  nfCoreTest.vcxproj  nfCoreTest.vcxproj.filters  stdafx.hpp
nfEngine/nfRenderer/: DebugRenderer.cpp  DebugRenderer.hpp  DebugRendererContext.hpp  Font.cpp  Font.hpp  GeometryBuffer.cpp  GeometryBuffer.hpp  GeometryBufferRenderer.cpp  GeometryBufferRenderer.hpp  GeometryRenderer.cpp  GeometryRenderer.hpp  GuiRenderer.cpp  GuiRenderer.hpp  GuiRendererContext.hpp  HighLevelRenderer.cpp  HighLevelRenderer.hpp  LightsRenderer.cpp  LightsRenderer.hpp  LightsRendererContext.hpp  MultiPipelineState.cpp  MultiPipelineState.hpp  Multishader.cpp  Multishader.hpp  PCH.hpp  PostProcessRenderer.cpp  PostProcessRenderer.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderProxies.hpp  RenderScene.cpp  RenderScene.hpp  Renderer.cpp  Renderer.hpp  RendererContext.cpp  RendererContext.hpp  RendererModule.hpp  RendererResources.cpp  RendererResources.hpp  ShaderCommon.hpp  ShadowMap.cpp  (+7 more)
nfEngine/nfRendererD3D11/: DebugRenderer.cpp  DebugRenderer.h  DebugRenderer.hpp  GeometryBufferRenderer.cpp  GeometryBufferRenderer.h  GeometryBufferRenderer.hpp  GuiRenderer.cpp  GuiRenderer.h  GuiRenderer.hpp  LightsRenderer.cpp  LightsRenderer.h  LightsRenderer.hpp  Multishader.cpp  Multishader.h  Multishader.hpp  PostProcessRenderer.cpp  PostProcessRenderer.h  PostProcessRenderer.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  RendererContext.cpp  RendererContext.h  RendererContext.hpp  RendererResources.cpp  RendererResources.h  RendererResources.hpp  ShadowsRenderer.cpp  ShadowsRenderer.h  ShadowsRenderer.hpp  nfRendererD3D11.cpp  nfRendererD3D11.h  nfRendererD3D11.vcxproj  nfRendererD3D11.vcxproj.filters  stdafx.h
nfEngine/nfRendererDemo/: BasicScene.cpp  BasicScene.hpp  CMakeLists.txt  Common.cpp  Common.hpp  DepthStencilScene.cpp  DepthStencilScene.hpp  Main.cpp  PCH.hpp  RendererUtils.cpp  RendererUtils.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Scenes.cpp  Scenes.hpp  VertexBuffersScene.cpp  VertexBuffersScene.hpp  main.cpp  nfRendererDemo.vcxproj  nfRendererDemo.vcxproj.filters  stdafx.hpp
nfEngine/nfRendererTest/: Backends.cpp  Backends.hpp  CMakeLists.txt  DrawTest.cpp  DrawTest.hpp  Main.cpp  PCH.hpp  RendererTest.cpp  RendererTest.hpp  Shader.cpp  Texture2D.cpp  main.cpp  nfRendererTest.vcxproj  nfRendererTest.vcxproj.filters  stdafx.hpp
nfEngine/nfResources/: CMakeLists.txt  CollisionShapeFile.cpp  CollisionShapeFile.hpp  MeshFile.cpp  MeshFile.hpp  PCH.hpp  nfResources.vcxproj  nfResources.vcxproj.filters
(+2634 files in other folders)
