# @file
# @author LKostyra (costyrra.xl@gmail.com)
# @brief  CMake for nfCommon

MESSAGE("Generating Makefile for nfCommon")

FILE(GLOB NFCOMMON_SOURCES              *.cpp)
FILE(GLOB NFCOMMON_HEADERS              *.hpp)
FILE(GLOB NFCOMMON_LINUX_SOURCES        Linux/*.cpp)
FILE(GLOB NFCOMMON_LINUX_HEADERS        Linux/*.hpp)
FILE(GLOB NFCOMMON_MATH_SOURCES         Math/*.cpp)
FILE(GLOB NFCOMMON_MATH_HEADERS         Math/*.hpp)
FILE(GLOB NFCOMMON_MATH_SSE_SOURCES     Math/SSE/*.cpp)
FILE(GLOB NFCOMMON_MATH_SSE_HEADERS     Math/SSE/*.hpp)
FILE(GLOB NFCOMMON_MATH_FPU_SOURCES     Math/FPU/*.cpp)
FILE(GLOB NFCOMMON_MATH_FPU_HEADERS     Math/FPU/*.hpp)
FILE(GLOB NFCOMMON_PACKER_SOURCES       Packer/*.cpp)
FILE(GLOB NFCOMMON_PACKER_HEADERS       Packer/*.hpp)
FILE(GLOB NFCOMMON_LOGGER_SOURCES       LoggerBackends/*.cpp)
FILE(GLOB NFCOMMON_LOGGER_HEADERS       LoggerBackends/*.hpp)
FILE(GLOB NFCOMMON_IMAGE_SOURCES        Image/*.cpp)
FILE(GLOB NFCOMMON_IMAGE_HEADERS        Image/*.hpp)
FILE(GLOB NFCOMMON_MEMORY_SOURCES       Memory/*.cpp)
FILE(GLOB NFCOMMON_MEMORY_HEADERS       Memory/*.hpp)
FILE(GLOB NFCOMMON_CONTAINERS_SOURCES   Containers/*.cpp)
FILE(GLOB NFCOMMON_CONTAINERS_HEADERS   Containers/*.hpp)

# Windows DllMain definition
IF(NOT WIN32)
    LIST(REMOVE_ITEM NFCOMMON_SOURCES "${NFCOMMON_DIRECTORY}/Main.cpp")
ENDIF(NOT WIN32)

INCLUDE_DIRECTORIES(${NFE_ROOT_DIRECTORY}/nfEngineDeps/ ${NFENGINE_DIRECTORY})

ADD_LIBRARY(nfCommon SHARED
            ${NFCOMMON_SOURCES} ${NFCOMMON_HEADERS}
            ${NFCOMMON_MATH_SOURCES} ${NFCOMMON_MATH_HEADERS}
            ${NFCOMMON_MATH_SSE_SOURCES} ${NFCOMMON_MATH_SSE_HEADERS}
            ${NFCOMMON_MATH_FPU_SOURCES} ${NFCOMMON_MATH_FPU_HEADERS}
            ${NFCOMMON_PACKER_SOURCES} ${NFCOMMON_PACKER_HEADERS}
            ${NFCOMMON_LOGGER_SOURCES} ${NFCOMMON_LOGGER_HEADERS}
            ${NFCOMMON_LINUX_SOURCES} ${NFCOMMON_LINUX_HEADERS}
            ${NFCOMMON_IMAGE_SOURCES} ${NFCOMMON_IMAGE_HEADERS}
            ${NFCOMMON_MEMORY_SOURCES} ${NFCOMMON_MEMORY_HEADERS}
            ${NFCOMMON_CONTAINERS_SOURCES} ${NFCOMMON_CONTAINERS_HEADERS}
            )

ADD_CUSTOM_COMMAND(TARGET nfCommon POST_BUILD COMMAND
                   ${CMAKE_COMMAND} -E copy $<TARGET_FILE:nfCommon> ${NFE_OUTPUT_DIRECTORY}/${targetfile})
