# @file
# @author LKostyra (costyrra.xl@gmail.com)
# @brief  CMake for nfCommon

MESSAGE("Generating Makefile for nfCommon")

FILE(GLOB NFCOMMON_SOURCES                  *.cpp)
FILE(GLOB NFCOMMON_HEADERS                  *.hpp)
FILE(GLOB NFCOMMON_SYSTEM_SOURCES           System/*.cpp System/Linux/*.cpp)
FILE(GLOB NFCOMMON_SYSTEM_HEADERS           System/*.hpp System/Linux/*.hpp)
FILE(GLOB NFCOMMON_FILE_SYSTEM_SOURCES      FileSystem/*.cpp FileSystem/Linux/*.cpp)
FILE(GLOB NFCOMMON_FILE_SYSTEM_HEADERS      FileSystem/*.hpp FileSystem/Linux/*.hpp)
FILE(GLOB NFCOMMON_MATH_SOURCES             Math/*.cpp Math/FPU/*.cpp Math/SSE/*.cpp)
FILE(GLOB NFCOMMON_MATH_HEADERS             Math/*.hpp Math/FPU/*.hpp Math/SSE/*.hpp)
FILE(GLOB NFCOMMON_CONFIG_SOURCES           Config/*.cpp)
FILE(GLOB NFCOMMON_CONFIG_HEADERS           Config/*.hpp)
FILE(GLOB NFCOMMON_LOGGER_SOURCES           Logger/*.cpp Logger/Backends/*.cpp)
FILE(GLOB NFCOMMON_LOGGER_HEADERS           Logger/*.hpp Logger/Backends/*.hpp)
FILE(GLOB NFCOMMON_IMAGE_SOURCES            Image/*.cpp)
FILE(GLOB NFCOMMON_IMAGE_HEADERS            Image/*.hpp)
FILE(GLOB NFCOMMON_MEMORY_SOURCES           Memory/*.cpp)
FILE(GLOB NFCOMMON_MEMORY_HEADERS           Memory/*.hpp)
FILE(GLOB NFCOMMON_CONTAINERS_SOURCES       Containers/*.cpp)
FILE(GLOB NFCOMMON_CONTAINERS_HEADERS       Containers/*.hpp)
FILE(GLOB NFCOMMON_UTILS_SOURCES            Utils/*.cpp)
FILE(GLOB NFCOMMON_UTILS_HEADERS            Utils/*.hpp)
FILE(GLOB_RECURSE NFCOMMON_REFLECTION_SOURCES   Reflection/*.cpp)
FILE(GLOB_RECURSE NFCOMMON_REFLECTION_HEADERS   Reflection/*.hpp)

# Windows DllMain definition
IF(NOT WIN32)
    LIST(REMOVE_ITEM NFCOMMON_SOURCES "${NFCOMMON_DIRECTORY}/Main.cpp")
ENDIF(NOT WIN32)

# setup directories
INCLUDE_DIRECTORIES(${NFE_ROOT_DIRECTORY}/nfEngineDeps/
                    ${NFENGINE_DIRECTORY}
                    ${NFCOMMON_DIRECTORY})

ADD_LIBRARY(nfCommon SHARED
            ${NFCOMMON_SOURCES} ${NFCOMMON_HEADERS}
            ${NFCOMMON_MATH_SOURCES} ${NFCOMMON_MATH_HEADERS}
            ${NFCOMMON_LOGGER_SOURCES} ${NFCOMMON_LOGGER_HEADERS}
            ${NFCOMMON_LOGGER_BACKENDS_SOURCES} ${NFCOMMON_LOGGER_BACKENDS_HEADERS}
            ${NFCOMMON_SYSTEM_SOURCES} ${NFCOMMON_SYSTEM_HEADERS}
            ${NFCOMMON_FILE_SYSTEM_SOURCES} ${NFCOMMON_FILE_SYSTEM_HEADERS}
            ${NFCOMMON_CONFIG_SOURCES} ${NFCOMMON_CONFIG_HEADERS}
            ${NFCOMMON_IMAGE_SOURCES} ${NFCOMMON_IMAGE_HEADERS}
            ${NFCOMMON_MEMORY_SOURCES} ${NFCOMMON_MEMORY_HEADERS}
            ${NFCOMMON_CONTAINERS_SOURCES} ${NFCOMMON_CONTAINERS_HEADERS}
            ${NFCOMMON_UTILS_SOURCES} ${NFCOMMON_UTILS_HEADERS}
	    ${NFCOMMON_REFLECTION_SOURCES} ${NFCOMMON_REFLECTION_HEADERS}
            )

SET_TARGET_PROPERTIES(nfCommon PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "PCH.hpp")

ADD_CUSTOM_COMMAND(TARGET nfCommon POST_BUILD COMMAND
                   ${CMAKE_COMMAND} -E copy $<TARGET_FILE:nfCommon> ${NFE_OUTPUT_DIRECTORY}/${targetfile})

cotire(nfCommon)