MESSAGE("Generating Makefile for RaytracerDemo")

SET(NFE_RAYTRACER_DEMO_DIRECTORY ${NFE_APPS_DIRECTORY}/RaytracerDemo)

FILE(GLOB RAYTRACER_DEMO_SOURCES *.cpp)
FILE(GLOB RAYTRACER_DEMO_LINUX_SOURCES Linux/*.cpp)
FILE(GLOB_RECURSE RAYTRACER_EXTERNAL_IMGUI_SOURCES ${NFE_ROOT_DIRECTORY}/nfEngineDeps/imgui/*.cpp)
FILE(GLOB_RECURSE RAYTRACER_EXTERNAL_TINYOBJ_SOURCES ${NFE_ROOT_DIRECTORY}/nfEngineDeps/tinyobjloader/*.cpp)
FILE(GLOB RAYTRACER_DEMO_HEADERS *.h)

INCLUDE_DIRECTORIES(${NFE_RAYTRACER_DEMO_DIRECTORY}
                    ${NFE_SRC_DIRECTORY}
                    ${NFE_ROOT_DIRECTORY}/nfEngineDeps/
                    ${NFE_ROOT_DIRECTORY}/nfEngineDeps/rapidjson/include/
                    ${RT_ROOT_DIRECTORY}/External/)
LINK_DIRECTORIES(${NFEDEPS_LIB_DIRECTORY} ${NFE_OUTPUT_DIRECTORY})

ADD_EXECUTABLE(RaytracerDemo
    ${RAYTRACER_DEMO_SOURCES}
    ${RAYTRACER_EXTERNAL_IMGUI_SOURCES}
    ${RAYTRACER_EXTERNAL_TINYOBJ_SOURCES}
    ${RAYTRACER_DEMO_LINUX_SOURCES}
)

SET_TARGET_PROPERTIES(RaytracerDemo PROPERTIES LINK_FLAGS "-pthread")

ADD_DEPENDENCIES(RaytracerDemo Raytracer)
TARGET_LINK_LIBRARIES(RaytracerDemo Raytracer)

ADD_CUSTOM_COMMAND(TARGET RaytracerDemo POST_BUILD COMMAND
                   ${CMAKE_COMMAND} -E copy $<TARGET_FILE:RaytracerDemo> ${NFE_OUTPUT_DIRECTORY}/${targetfile})
